@startuml
skinparam dpi 300

allow_mixing
hide empty members
left to right direction
!define exception(name) class name << (E,#FFAAAA) >>

node Postgres as postgres <<5433>> {
    database "heroes-database" as db
}

node Quarkus as quarkus <<8083>> {
    package "hero-api" as heroapi {
        entity Hero
        class HeroApplication
        class HeroApplicationLifeCycle
        class HeroResource
        class HeroService
        artifact "index<U+002E>html" as index
        artifact "application<U+002E>properties" as properties
        artifact "import<U+002E>sql" as import
        package "health" {
            class DatabaseConnectionHealthCheck
            class PingHeroResourceHealthCheck
            DatabaseConnectionHealthCheck .[hidden].> PingHeroResourceHealthCheck
        }
        HeroResource ..> HeroService
        HeroResource .> Hero
        HeroApplication .[hidden].> HeroApplicationLifeCycle
        properties .[hidden].> import
        Hero .[hidden].> index
    }
}

package "tests" as tests {
    class HeroResourceTest
    class NativeHeroResourceIT
}

quarkus ....> postgres
heroapi .[hidden].> tests

@enduml
